--- a/Packages/com.game.rendering.uieffect/Editor/Game.Rendering.UIEffect.Editor.asmdef
+++ b/Packages/com.game.rendering.uieffect/Editor/Game.Rendering.UIEffect.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
-        "GUID:99a66aa5f55522d4a92199cf38982f67"
+        "GUID:99a66aa5f55522d4a92199cf38982f67",
+        "GUID:3eae0364be2026648bf74846acb8a731"
     ],
     "includePlatforms": [
         "Editor"
